# citeseer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/core/: config.py  logging.py
app/es/: client.py  mapping.py  search.py
app/ingest/: pipeline.py
app/mcp/: server.py
app/s2/: client.py  models.py  pdf.py
app/specter/: client.py
specter/: Dockerfile  app.py  requirements.txt
tests/: conftest.py  test_checkpoint.py  test_es_client.py  test_es_search.py  test_ingest_integration.py  test_pdf.py  test_pipeline.py  test_s2_fetcher.py  test_s2_models.py  test_specter_client.py
